# fanout-links

./: CHANGELOG.md  Cargo.toml  README.md
src/: main.rs
src/data/: cmd.rs  settings.rs
src/io/: file.rs  web.rs
src/parse/: links.rs  mod.rs  settings.rs
src/types/: cmd.rs
