[package]
name = "fl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
tempfile = { version = "3.3.0" }
open = { version = "3.0.2" }
reqwest = {version = "0.11.11"}
tokio = { version = "1.20.1", features = ["full"] }